--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 <h1>Project list</h3>
 <a href="../homedesign/index.html">Home design</a>
- <a href="../intirierdesign/index.html">interior design</a>
+ <a href="../interior design/index.html">interior design</a>
 </body>
 </html>
