--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 
 <body>
 
-<h1>Project list</h3>
+<h1>Project list</h1>
+ <br>
+ <h3>Project 1</h3>
 <a href="../homedesign/index.html">Home design</a>
+ <br>
+ <h3>Project 2</h3>
  <a href="../interiordesign/index.html">interior design</a>
 </body>
 </html>
