--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
 <title>project list</title>
@@ -15,5 +15,57 @@
  <br>
  <h3>Project 2</h3>
  <a href="../interiordesign/index.html">interior design</a>
+ <br>
+ <h3>Project 3</h3>
+ <a href="../Quizproject/index.html">Quiz projct</a>
+ 
+ 
 </body>
-</html>
+</html-->
+ 
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+<body>
+    <h2 align="center">Project List</h2>
+    <div class="container">
+      <div class="row" >
+         <div class="col-12 col-md-4 col-sm-6 ">
+          <div class="container mt-3">
+            <div class="card">
+              <div class="card-body ">
+                <h5 class="card-title text-center mb-3">Home interior design</h5>
+                <a href="../homedesign/index.html" role="button" class="btn btn-outline-success card-link ">Click Me...</a>
+<!--                <a href="../resumeX/taskResume.html" role="button" class="btn btn-outline-success card-link ">Click Me...</a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-sm-6">
+          <div class="container mt-3">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title text-center">home interior furniture design</h5>
+                <a href="../interiordesign/index.html" role="button" class="btn btn-outline-success card-link ">Click Me...</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-sm-6">
+          <div class="container mt-3">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title text-center">Quiz project</h5>
+                <a href="../Quizproject/index.html" role="button" class="btn btn-outline-success card-link">Click Me...</a>
+              </div>
+            </div>
+          </div>
+        </div>
+   </body>
+   </html>
