--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="card">
               <div class="card-body ">
                 <h5 class="card-title text-center mb-3">Home interior design</h5>
-                <a href="../homedesign/index.html" role="button" class="btn btn-outline-success card-link ">Click Me...</a>
+                <a href="../homedesign/index.html" role="button" class="btn btn-outline-success card-link  margin-left:20px">Click Me...</a>
 <!--                <a href="../resumeX/taskResume.html" role="button" class="btn btn-outline-success card-link ">Click Me...</a> -->
               </div>
             </div>
@@ -52,7 +52,7 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title text-center">home interior furniture design</h5>
-                <a href="../interiordesign/index.html" role="button" class="btn btn-outline-success card-link ">Click Me...</a>
+                <a href="../interiordesign/index.html" role="button" class="btn btn-outline-success card-link margin-left:20px ">Click Me...</a>
               </div>
             </div>
           </div>
@@ -62,7 +62,7 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title text-center">Quiz project</h5>
-                <a href="../Quizproject/index.html" role="button" class="btn btn-outline-success card-link">Click Me...</a>
+                <a href="../Quizproject/index.html" role="button" class="btn btn-outline-success card-link margin-left:20px">Click Me...</a>
               </div>
             </div>
           </div>
