--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title text-center">Quiz project</h5>
-                <a href="../Quizproject/index.html" role="button" class="btn btn-outline-success card-link">Click Me...</a>
+                <a href="../Quizproject/Quiz.html" role="button" class="btn btn-outline-success card-link">Click Me...</a>
               </div>
             </div>
           </div>
