--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           <div class="container mt-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title text-center">table</h5>
-                <a href="../table/table.html" role="button" class="btn btn-outline-success card-link">Click Me...</a>
+                <h5 class="card-title text-center">table project</h5>
+                <a href="../table project/index.html" role="button" class="btn btn-outline-success card-link">Click Me...</a>
               </div>
             </div>
           </div>
