--- a/index.html
+++ b/index.html
@@ -52,5 +52,15 @@
             </div>
           </div>
         </div>
+        <div class="col-12 col-md-4 col-sm-6">
+          <div class="container mt-3">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title text-center">My Portfolio</h5>
+                <a href="../my website/index.html" role="button" class="btn btn-outline-success card-link">Click Me...</a>
+              </div>
+            </div>
+          </div>
+        </div>
    </body>
    </html>
