--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <h2 align="center">Project List</h2>
     <div class="container">
       <div class="row" >
+        <div class="col-12 col-md-4 col-sm-6">
+          <div class="container mt-3">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title text-center">My Portfolio</h5>
+                <a href="../my website/index.html" role="button" class="btn btn-outline-success card-link">Click Me...</a>
+              </div>
+            </div>
+          </div>
+        </div>
          <div class="col-12 col-md-4 col-sm-6 ">
           <div class="container mt-3">
             <div class="card">
@@ -56,8 +66,8 @@
           <div class="container mt-3">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title text-center">My Portfolio</h5>
-                <a href="../my website/index.html" role="button" class="btn btn-outline-success card-link">Click Me...</a>
+                <h5 class="card-title text-center">QR Code Generate</h5>
+                <a href="../QR code project/index.html" role="button" class="btn btn-outline-success card-link">Click Me...</a>
               </div>
             </div>
           </div>
