--- a/my website/index.html
+++ b/my website/index.html
@@ -161,7 +161,7 @@
                         <p>I've curated a luxurious home interior with elegantly furnished rooms, a state-of-the-art
                             kitchen equipped with high-end appliances, and a stylish outdoor space perfect for
                             relaxation and entertainment.</p>
-                        <a href="C:\Users\WELCOME\Desktop\homedesign\index.html"><i
+                        <a href="https://manoj25077.github.io/Quizproject/index.html"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                         <h3>furniture design</h3>
                         <p> I've designed a modern, minimalist home interior with a neutral color palette, integrating
                             sustainable materials for a cozy and eco-friendly living space.</p>
-                        <a href="C:\Users\WELCOME\Desktop\interiordesign\index.html"><i
+                        <a href="https://manoj25077.github.io/interiordesign/index.html"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
                             provides real-time feedback and performance analytics, enabling participants to track their
                             progress and identify areas for improvement effectively.
                         </p>
-                        <a href="C:\Users\WELCOME\Desktop\Quizproject\index.html"><i
+                        <a href="https://manoj25077.github.io/Quizproject/index.html"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
 
                     </div>
