--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
           <div class="container mt-3">
             <div class="card">
               <div class="card-body">
+                <h5 class="card-title text-center">Online tea & tea products sales</h5>
+                <a href="../online tea products sale/index.html" role="button" class="btn btn-outline-success card-link">Click Me...</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-sm-6">
+          <div class="container mt-3">
+            <div class="card">
+              <div class="card-body">
                 <h5 class="card-title text-center">Quiz project</h5>
                 <a href="../Quizproject/index.html" role="button" class="btn btn-outline-success card-link">Click Me...</a>
               </div>
