--- a/interiordesign/index.html
+++ b/interiordesign/index.html
@@ -32,9 +32,9 @@
                     <li><a href="#products">Products</a></li>
                     <li><a href="#singleproducts">Single Products</a></li>
                     <li><a href="#store">Store</a></li>
-                    <i class="fa-solid fa-circle-xmark" class="fas" onclick="closemenu()"></i>
+<!--                     <i class="fa-solid fa-circle-xmark" class="fas" onclick="closemenu()"></i> -->
                 </ul>
-                    <i class="fa-solid fa-bars" class="fas" onclick="openmenu()"></i>
+<!--                     <i class="fa-solid fa-bars" class="fas" onclick="openmenu()"></i> -->
 
             </div>
             <!-- <div class="card">
