--- a/my website/index.html
+++ b/my website/index.html
@@ -166,7 +166,7 @@
                             Assam: A strong, malty tea from the Assam region in India, known for its brisk flavor.
                             Darjeeling: Often referred to as the "Champagne of Teas," this tea from India has a light, floral, and fruity flavor.
                             Earl Grey: A popular flavored tea with a distinctive bergamot citrus aroma.</p>
-                        <a href="C:\Users\WELCOME\Desktop\homedesign\index.html"><i
+                        <a href="https://manoj25077.github.io/online%20tea%20products%20sale/index.html"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                             their
                             progress and identify areas for improvement effectively.
                         </p>
-                        <a href="C:\Users\WELCOME\Desktop\Quizproject\index.html"><i
+                        <a href="https://manoj25077.github.io/online%20tea%20products%20sale/index.html"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
 
                     </div>
@@ -190,14 +190,12 @@
                     <img src="./images/qr code.png" alt="">
                     <div class="layer">
                         <h3>QR Code Generator</h3>
-                        <p>The Quiz project engages users with interactive questions across diverse topics,
-                            promoting
-                            learning, knowledge retention, and skills assessment in an entertaining format. It also
-                            provides real-time feedback and performance analytics, enabling participants to track
-                            their
-                            progress and identify areas for improvement effectively.
+                        <p>Developed a web-based QR code generator that allows
+                           users to create and download QR codes based on input text
+                           or URLs. Utilized JavaScript to dynamically generate QR
+                           codes in real-time as users type their input.
                         </p>
-                        <a href="C:\Users\WELCOME\Desktop\Quizproject\index.html"><i
+                        <a href="https://manoj25077.github.io/QRcodeproject/index.html"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
 
                     </div>
