--- a/my website/index.html
+++ b/my website/index.html
@@ -181,7 +181,7 @@
                             their
                             progress and identify areas for improvement effectively.
                         </p>
-                        <a href="https://manoj25077.github.io/online%20tea%20products%20sale/index.html"><i
+                        <a href="https://manoj25077.github.io/Quizproject/index.html"><i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
 
                     </div>
